[package]
autotests = false
edition = "2021"
name = "seq"
publish = false
version = "0.0.0"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = {version = "1.0.49", features = ["diff"]}

[dependencies]
# TODO
proc-macro2 = {version = "1.0", features = ["span-locations"]}
quote = "1.0"
syn = {version = "1.0", features = ["full", "parsing"]}
